fix(task): harden lifecycle handoffs and path identity